Archive2/bc/8598008460fc6a/output
main.cpp:12:13: warning: address of stack memory associated with local variable 'ans' returned [-Wreturn-stack-address]
     return ans;
            ^~~
main.cpp:18:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 warning and 1 error generated.
